<resources>
    <string name="app_name">Common Hash</string>
    <string name="action_settings">Settings</string>
    <string name="banner">Please Find the Common Hashes Below: </string>
    <string name="sha256">Hash Digest</string>
    <string name="rawText">Raw Text</string>
    <string name="btnHash">Hash</string>
    <string name="btnClear">Clear</string>
    <string name="show_about">About</string>
    <string name="show_license">License</string>
    <string name="license_load_issue">Oops, license loading issue</string>
    <string-array name="hash_algorithms">
        <item>MD2</item>
        <item>MD4</item>
        <item>MD5</item>
        <item>RIPEMD-128</item>
        <item>RIPEMD-160</item>
        <item>RIPEMD-256</item>
        <item>RIPEMD-320</item>
        <item>SHA-1</item>
        <item>SHA-224</item>
        <item>SHA-256</item>
        <item>SHA-384</item>
        <item>SHA-512</item>
        <item>SHA-3</item>
        <item>Tiger</item>
        <item>Whirlpool</item>
    </string-array>
</resources>
